--- a/W2 lab/Lab2.ipynb
+++ b/W2 lab/Lab2.ipynb
@@ -26,10 +26,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import <script_name>\n",
+    "# <script_name>.function_name(<args>)\n",
+    "# from functionals import simple_model\n",
     "import functionals as f\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -38,9 +41,12 @@
     "path_to_file = 'messy_data.csv'\n",
     "data = pd.read_csv(path_to_file)\n",
     "\n",
+    "# one hot encoding\n",
+    "data_onehot = pd.get_dummies(data, drop_first=True)\n",
+    "\n",
     "# Display dataset information\n",
     "# data.head()\n",
-    "# data.info(\n",
+    "# data.info()\n",
     "# data.describe()\n",
     "\n",
     "# Run the simple model\n",
@@ -58,10 +64,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.7891566265060241\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/k9/vcw_mvv16nxc8ncjdxnvv5fm0000gn/T/ipykernel_80473/3934857499.py:14: FutureWarning: ChainedAssignmentError: behaviour will change in pandas 3.0!\n",
+      "You are setting values through chained assignment. Currently this works in certain cases, but when using Copy-on-Write (which will become the default behaviour in pandas 3.0) this will never work to update the original DataFrame or Series, because the intermediate object on which we are setting values will behave as a copy.\n",
+      "A typical example is when you are setting values in a column of a DataFrame, like:\n",
+      "\n",
+      "df[\"col\"][row_indexer] = value\n",
+      "\n",
+      "Use `df.loc[row_indexer, \"col\"] = values` instead, to perform the assignment in a single step and ensure this keeps updating the original `df`.\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "\n",
+      "  data_no_duplicates['tprc'].loc[outliers['tprc']] = np.mean(data_no_duplicates['tprc'])\n",
+      "/var/folders/k9/vcw_mvv16nxc8ncjdxnvv5fm0000gn/T/ipykernel_80473/3934857499.py:22: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  cleaner_data[col].fillna(cleaner_data[col].mean(), inplace=True)\n"
+     ]
+    }
+   ],
    "source": [
+    "import scipy.stats as stats\n",
+    "\n",
     "# Remove duplicates\n",
     "data_no_duplicates = data.copy().drop_duplicates()\n",
     "\n",
@@ -69,11 +109,21 @@
     "data_format_fixed = data.copy()\n",
     "data_format_fixed['sex'] = data_format_fixed['sex'].apply(lambda x: 'female' if 'F' in x or 'f' in x else 'male')\n",
     "\n",
-    "# Check for outliers - if they exist, remove them\n",
-    "# <insert code here>\n",
+    "# Check for outliers - if they exist, remove them or consider imputing them\n",
+    "outliers = np.abs(stats.zscore(data_no_duplicates.select_dtypes(include=[np.number]))) > 3\n",
+    "\n",
+    "# we can see that tprc column has some outliers\n",
+    "data_no_duplicates['tprc'].loc[outliers['tprc']] = np.mean(data_no_duplicates['tprc'])\n",
     "\n",
     "# Dataset with no duplicates, fixed format, missing values and outlier removed (if they exist)\n",
-    "# <insert code here>\n"
+    "cleaner_data = data_no_duplicates.copy()\n",
+    "cleaner_data.drop(columns=['deck'],inplace=True)\n",
+    "\n",
+    "# impute missing values for numeric columns only\n",
+    "for col in cleaner_data.select_dtypes(include=[np.number]).columns:\n",
+    "    cleaner_data[col].fillna(cleaner_data[col].mean(), inplace=True)\n",
+    "\n",
+    "f.simple_model(cleaner_data)\n"
    ]
   },
   {
@@ -100,9 +150,421 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "survived       0\n",
+      "deck           0\n",
+      "embarked       0\n",
+      "pclass         0\n",
+      "embark_town    0\n",
+      "sex            0\n",
+      "adult_male     0\n",
+      "who            0\n",
+      "wspd           0\n",
+      "lfwa           0\n",
+      "class          0\n",
+      "tprc           0\n",
+      "sibsp          0\n",
+      "age            0\n",
+      "alone          0\n",
+      "fare           0\n",
+      "parch          0\n",
+      "dtype: int64\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/k9/vcw_mvv16nxc8ncjdxnvv5fm0000gn/T/ipykernel_80473/2573626199.py:8: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  data['age'].fillna(data['age'].mean(), inplace=True)\n",
+      "/var/folders/k9/vcw_mvv16nxc8ncjdxnvv5fm0000gn/T/ipykernel_80473/2573626199.py:9: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
+      "\n",
+      "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
+      "\n",
+      "\n",
+      "  data['embarked'].fillna(data['embarked'].mode()[0], inplace=True)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "survived",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "deck",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "embarked",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "pclass",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "embark_town",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "sex",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "adult_male",
+         "rawType": "bool",
+         "type": "boolean"
+        },
+        {
+         "name": "who",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "wspd",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "lfwa",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "class",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "tprc",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "sibsp",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "age",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "alone",
+         "rawType": "bool",
+         "type": "boolean"
+        },
+        {
+         "name": "fare",
+         "rawType": "float64",
+         "type": "float"
+        },
+        {
+         "name": "parch",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "conversionMethod": "pd.DataFrame",
+       "ref": "60743132-0774-4cb1-b889-39dd38b4209f",
+       "rows": [
+        [
+         "1",
+         "1",
+         "C",
+         "C",
+         "1.0",
+         "Cherbourg",
+         "female",
+         "False",
+         "woman",
+         "38.0",
+         "76.0",
+         "First",
+         "215.8499",
+         "1.0",
+         "38.0",
+         "False",
+         "71.2833",
+         "0.0"
+        ],
+        [
+         "6",
+         "0",
+         "E",
+         "S",
+         "1.0",
+         "Southampton",
+         "male",
+         "True",
+         "man",
+         "54.0",
+         "108.0",
+         "First",
+         "157.58749999999998",
+         "0.0",
+         "54.0",
+         "True",
+         "51.8625",
+         "0.0"
+        ],
+        [
+         "10",
+         "1",
+         "G",
+         "S",
+         "3.0",
+         "Southampton",
+         "female",
+         "False",
+         "child",
+         "4.0",
+         "8.0",
+         "Third",
+         "52.099999999999994",
+         "1.0",
+         "4.0",
+         "False",
+         "16.7",
+         "1.0"
+        ],
+        [
+         "21",
+         "1",
+         "D",
+         "S",
+         "2.0",
+         "Southampton",
+         "male",
+         "True",
+         "man",
+         "34.0",
+         "68.0",
+         "Second",
+         "41.0",
+         "0.0",
+         "34.0",
+         "True",
+         "13.0",
+         "0.0"
+        ],
+        [
+         "23",
+         "1",
+         "A",
+         "S",
+         "1.0",
+         "Southampton",
+         "male",
+         "True",
+         "man",
+         "28.0",
+         "56.0",
+         "First",
+         "108.5",
+         "0.0",
+         "28.0",
+         "True",
+         "35.5",
+         "0.0"
+        ]
+       ],
+       "shape": {
+        "columns": 17,
+        "rows": 5
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>survived</th>\n",
+       "      <th>deck</th>\n",
+       "      <th>embarked</th>\n",
+       "      <th>pclass</th>\n",
+       "      <th>embark_town</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>adult_male</th>\n",
+       "      <th>who</th>\n",
+       "      <th>wspd</th>\n",
+       "      <th>lfwa</th>\n",
+       "      <th>class</th>\n",
+       "      <th>tprc</th>\n",
+       "      <th>sibsp</th>\n",
+       "      <th>age</th>\n",
+       "      <th>alone</th>\n",
+       "      <th>fare</th>\n",
+       "      <th>parch</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>C</td>\n",
+       "      <td>C</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Cherbourg</td>\n",
+       "      <td>female</td>\n",
+       "      <td>False</td>\n",
+       "      <td>woman</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>First</td>\n",
+       "      <td>215.8499</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>71.2833</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0</td>\n",
+       "      <td>E</td>\n",
+       "      <td>S</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>male</td>\n",
+       "      <td>True</td>\n",
+       "      <td>man</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>108.0</td>\n",
+       "      <td>First</td>\n",
+       "      <td>157.5875</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>51.8625</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>1</td>\n",
+       "      <td>G</td>\n",
+       "      <td>S</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>female</td>\n",
+       "      <td>False</td>\n",
+       "      <td>child</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>Third</td>\n",
+       "      <td>52.1000</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>16.7000</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>1</td>\n",
+       "      <td>D</td>\n",
+       "      <td>S</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>male</td>\n",
+       "      <td>True</td>\n",
+       "      <td>man</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>Second</td>\n",
+       "      <td>41.0000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>13.0000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>1</td>\n",
+       "      <td>A</td>\n",
+       "      <td>S</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>male</td>\n",
+       "      <td>True</td>\n",
+       "      <td>man</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>First</td>\n",
+       "      <td>108.5000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>35.5000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    survived deck embarked  pclass  embark_town     sex  adult_male    who  \\\n",
+       "1          1    C        C     1.0    Cherbourg  female       False  woman   \n",
+       "6          0    E        S     1.0  Southampton    male        True    man   \n",
+       "10         1    G        S     3.0  Southampton  female       False  child   \n",
+       "21         1    D        S     2.0  Southampton    male        True    man   \n",
+       "23         1    A        S     1.0  Southampton    male        True    man   \n",
+       "\n",
+       "    wspd   lfwa   class      tprc  sibsp   age  alone     fare  parch  \n",
+       "1   38.0   76.0   First  215.8499    1.0  38.0  False  71.2833    0.0  \n",
+       "6   54.0  108.0   First  157.5875    0.0  54.0   True  51.8625    0.0  \n",
+       "10   4.0    8.0   Third   52.1000    1.0   4.0  False  16.7000    1.0  \n",
+       "21  34.0   68.0  Second   41.0000    0.0  34.0   True  13.0000    0.0  \n",
+       "23  28.0   56.0   First  108.5000    0.0  28.0   True  35.5000    0.0  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Identify missing values\n",
     "missing_data = data.isnull().sum()\n",
@@ -252,7 +714,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.17"
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
