Working lab with completed functions

--- a/W2 lab/Lab2.ipynb
+++ b/W2 lab/Lab2.ipynb
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -748,7 +748,7 @@
     "# Create new features\n",
     "data_new_features = data.copy()\n",
     "data_new_features['family_size'] = data_new_features['sibsp'] + data_new_features['parch'] + 1\n",
-    "data_new_features['is_alone'] = (data_new_features['family_size'] == 1).astype(int)\n",
+    "data_new_features['is_alone'] = (data_new_features['family_size'] == 1).astype(int) #T or F return as 1 or 0\n",
     "\n",
     "# Any other features you can think of?\n",
     "\n",
