--- a/Assignment1/Scripts/main.ipynb
+++ b/Assignment1/Scripts/main.ipynb
@@ -2,18 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'data_preprocessor'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Import necessary modules\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mdata_preprocessor\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mdp\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mlinear_model\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m LogisticRegression\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'data_preprocessor'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.8478260869565217\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\liv_u\\Desktop\\GitHub\\ML-AI\\ML-AI\\Assignment1\\Scripts\\data_preprocessor.py:51: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "  data2[col]=data2[col].fillna(stats.mode(data2[col])) #inplace=True not working so we directly reassign\n"
      ]
     }
    ],
@@ -27,9 +31,13 @@
     "# 1. Load the dataset\n",
     "messy_data = pd.read_csv('../Data/messy_data.csv')\n",
     "clean_data = messy_data.copy()\n",
+    "# clean_data.head() \n",
+    "# clean_data.info()\n",
+    "# clean_data.describe()\n",
+    "\n",
     "\n",
     "# 2. Preprocess the data\n",
-    "clean_data = dp.impute_missing_values(clean_data, strategy='mean')\n",
+    "clean_data = dp.impute_missing_values(data=clean_data, strategy='mean')\n",
     "clean_data = dp.remove_duplicates(clean_data)\n",
     "clean_data = dp.normalize_data(clean_data)\n",
     "clean_data = dp.remove_redundant_features(clean_data)\n",
@@ -38,7 +46,7 @@
     "# clean_data.to_csv('../Data/clean_data.csv', index=False)\n",
     "\n",
     "# 4. Train and evaluate the model\n",
-    "simple_model(clean_data)"
+    "dp.simple_model(clean_data)"
    ]
   }
  ],
@@ -58,7 +66,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.21"
+   "version": "3.10.17"
   }
  },
  "nbformat": 4,
