updating files for working assignment 1

--- a/Assignment1/Scripts/main.ipynb
+++ b/Assignment1/Scripts/main.ipynb
@@ -6,18 +6,18 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 0.8478260869565217\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "c:\\Users\\liv_u\\Desktop\\GitHub\\ML-AI\\ML-AI\\Assignment1\\Scripts\\data_preprocessor.py:51: FutureWarning: Downcasting object dtype arrays on .fillna, .ffill, .bfill is deprecated and will change in a future version. Call result.infer_objects(copy=False) instead. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  data2[col]=data2[col].fillna(stats.mode(data2[col])) #inplace=True not working so we directly reassign\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.8478260869565217\n"
      ]
     }
    ],
@@ -43,7 +43,7 @@
     "clean_data = dp.remove_redundant_features(clean_data)\n",
     "\n",
     "# 3. Save the cleaned dataset\n",
-    "# clean_data.to_csv('../Data/clean_data.csv', index=False)\n",
+    "clean_data.to_csv('../Data/clean_data.csv', index=False)\n",
     "\n",
     "# 4. Train and evaluate the model\n",
     "dp.simple_model(clean_data)"
