cleaning code + comments

--- a/1_Preprocessing/Lab2.ipynb
+++ b/1_Preprocessing/Lab2.ipynb
@@ -26,331 +26,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
-       "columns": [
-        {
-         "name": "index",
-         "rawType": "object",
-         "type": "string"
-        },
-        {
-         "name": "survived",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "pclass",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "wspd",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "lfwa",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "tprc",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "sibsp",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "age",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "fare",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "parch",
-         "rawType": "float64",
-         "type": "float"
-        }
-       ],
-       "ref": "f609d6ba-4d19-45fa-9e77-1f577d1dc725",
-       "rows": [
-        [
-         "count",
-         "1158.0",
-         "1051.0",
-         "929.0",
-         "929.0",
-         "1158.0",
-         "1044.0",
-         "829.0",
-         "1036.0",
-         "1042.0"
-        ],
-        [
-         "mean",
-         "0.38341968911917096",
-         "2.2959086584205517",
-         "64.71582346609257",
-         "60.02368137782562",
-         "100.61706321243524",
-         "0.5134099616858238",
-         "30.28931242460796",
-         "32.11631225868726",
-         "0.36084452975047987"
-        ],
-        [
-         "std",
-         "0.48642919365693454",
-         "0.843446674426517",
-         "74.0009759429692",
-         "28.26418877371685",
-         "150.92996613587215",
-         "1.1193462431346064",
-         "14.127278872560499",
-         "48.31042649190756",
-         "0.7855090414450681"
-        ],
-        [
-         "min",
-         "0.0",
-         "1.0",
-         "0.67",
-         "0.84",
-         "2.0",
-         "0.0",
-         "0.42",
-         "0.0",
-         "0.0"
-        ],
-        [
-         "25%",
-         "0.0",
-         "1.0",
-         "24.0",
-         "42.0",
-         "25.6874",
-         "0.0",
-         "21.0",
-         "7.8958",
-         "0.0"
-        ],
-        [
-         "50%",
-         "0.0",
-         "3.0",
-         "35.0",
-         "58.0",
-         "45.3626",
-         "0.0",
-         "29.0",
-         "14.1083",
-         "0.0"
-        ],
-        [
-         "75%",
-         "1.0",
-         "3.0",
-         "53.0",
-         "78.0",
-         "95.825",
-         "1.0",
-         "39.0",
-         "31.0",
-         "0.0"
-        ],
-        [
-         "max",
-         "1.0",
-         "3.0",
-         "266.0",
-         "160.0",
-         "1538.9876",
-         "8.0",
-         "74.0",
-         "512.3292",
-         "6.0"
-        ]
-       ],
-       "shape": {
-        "columns": 9,
-        "rows": 8
-       }
-      },
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>survived</th>\n",
-       "      <th>pclass</th>\n",
-       "      <th>wspd</th>\n",
-       "      <th>lfwa</th>\n",
-       "      <th>tprc</th>\n",
-       "      <th>sibsp</th>\n",
-       "      <th>age</th>\n",
-       "      <th>fare</th>\n",
-       "      <th>parch</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>1158.000000</td>\n",
-       "      <td>1051.000000</td>\n",
-       "      <td>929.000000</td>\n",
-       "      <td>929.000000</td>\n",
-       "      <td>1158.000000</td>\n",
-       "      <td>1044.000000</td>\n",
-       "      <td>829.000000</td>\n",
-       "      <td>1036.000000</td>\n",
-       "      <td>1042.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>0.383420</td>\n",
-       "      <td>2.295909</td>\n",
-       "      <td>64.715823</td>\n",
-       "      <td>60.023681</td>\n",
-       "      <td>100.617063</td>\n",
-       "      <td>0.513410</td>\n",
-       "      <td>30.289312</td>\n",
-       "      <td>32.116312</td>\n",
-       "      <td>0.360845</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>0.486429</td>\n",
-       "      <td>0.843447</td>\n",
-       "      <td>74.000976</td>\n",
-       "      <td>28.264189</td>\n",
-       "      <td>150.929966</td>\n",
-       "      <td>1.119346</td>\n",
-       "      <td>14.127279</td>\n",
-       "      <td>48.310426</td>\n",
-       "      <td>0.785509</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.670000</td>\n",
-       "      <td>0.840000</td>\n",
-       "      <td>2.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.420000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>24.000000</td>\n",
-       "      <td>42.000000</td>\n",
-       "      <td>25.687400</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>21.000000</td>\n",
-       "      <td>7.895800</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>35.000000</td>\n",
-       "      <td>58.000000</td>\n",
-       "      <td>45.362600</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>29.000000</td>\n",
-       "      <td>14.108300</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>53.000000</td>\n",
-       "      <td>78.000000</td>\n",
-       "      <td>95.825000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>39.000000</td>\n",
-       "      <td>31.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>3.000000</td>\n",
-       "      <td>266.000000</td>\n",
-       "      <td>160.000000</td>\n",
-       "      <td>1538.987600</td>\n",
-       "      <td>8.000000</td>\n",
-       "      <td>74.000000</td>\n",
-       "      <td>512.329200</td>\n",
-       "      <td>6.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          survived       pclass        wspd        lfwa         tprc  \\\n",
-       "count  1158.000000  1051.000000  929.000000  929.000000  1158.000000   \n",
-       "mean      0.383420     2.295909   64.715823   60.023681   100.617063   \n",
-       "std       0.486429     0.843447   74.000976   28.264189   150.929966   \n",
-       "min       0.000000     1.000000    0.670000    0.840000     2.000000   \n",
-       "25%       0.000000     1.000000   24.000000   42.000000    25.687400   \n",
-       "50%       0.000000     3.000000   35.000000   58.000000    45.362600   \n",
-       "75%       1.000000     3.000000   53.000000   78.000000    95.825000   \n",
-       "max       1.000000     3.000000  266.000000  160.000000  1538.987600   \n",
-       "\n",
-       "             sibsp         age         fare        parch  \n",
-       "count  1044.000000  829.000000  1036.000000  1042.000000  \n",
-       "mean      0.513410   30.289312    32.116312     0.360845  \n",
-       "std       1.119346   14.127279    48.310426     0.785509  \n",
-       "min       0.000000    0.420000     0.000000     0.000000  \n",
-       "25%       0.000000   21.000000     7.895800     0.000000  \n",
-       "50%       0.000000   29.000000    14.108300     0.000000  \n",
-       "75%       1.000000   39.000000    31.000000     0.000000  \n",
-       "max       8.000000   74.000000   512.329200     6.000000  "
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          survived       pclass        wspd        lfwa         tprc  \\\n",
+      "count  1158.000000  1051.000000  929.000000  929.000000  1158.000000   \n",
+      "mean      0.383420     2.295909   64.715823   60.023681   100.617063   \n",
+      "std       0.486429     0.843447   74.000976   28.264189   150.929966   \n",
+      "min       0.000000     1.000000    0.670000    0.840000     2.000000   \n",
+      "25%       0.000000     1.000000   24.000000   42.000000    25.687400   \n",
+      "50%       0.000000     3.000000   35.000000   58.000000    45.362600   \n",
+      "75%       1.000000     3.000000   53.000000   78.000000    95.825000   \n",
+      "max       1.000000     3.000000  266.000000  160.000000  1538.987600   \n",
+      "\n",
+      "             sibsp         age         fare        parch  \n",
+      "count  1044.000000  829.000000  1036.000000  1042.000000  \n",
+      "mean      0.513410   30.289312    32.116312     0.360845  \n",
+      "std       1.119346   14.127279    48.310426     0.785509  \n",
+      "min       0.000000    0.420000     0.000000     0.000000  \n",
+      "25%       0.000000   21.000000     7.895800     0.000000  \n",
+      "50%       0.000000   29.000000    14.108300     0.000000  \n",
+      "75%       1.000000   39.000000    31.000000     0.000000  \n",
+      "max       8.000000   74.000000   512.329200     6.000000  \n",
+      "Accuracy: 0.7419354838709677\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.60      0.33      0.43         9\n",
+      "           1       0.77      0.91      0.83        22\n",
+      "\n",
+      "    accuracy                           0.74        31\n",
+      "   macro avg       0.68      0.62      0.63        31\n",
+      "weighted avg       0.72      0.74      0.72        31\n",
+      "\n",
+      "Read more about the classification report: https://scikit-learn.org/stable/modules/generated/sklearn.metrics.classification_report.html and https://www.nb-data.com/p/breaking-down-the-classification\n"
+     ]
     }
    ],
    "source": [
     "# import <script_name>\n",
     "# <script_name>.function_name(<args>)\n",
     "# from functionals import simple_model\n",
-    "import functionals as f\n",
+    "import functionals as f \n",
     "# ^ original py script by prof w/ functions for this lab\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -360,15 +81,17 @@
     "data = pd.read_csv(path_to_file)\n",
     "\n",
     "# one hot encoding\n",
-    "data_onehot = pd.get_dummies(data, drop_first=True)\n",
+    "data_onehot = pd.get_dummies(data, drop_first=True) \n",
+    "# remove first level for k-1 dummies, such that first level is 0 in all dummies; reduces overfitting potential\n",
+    "\n",
     "\n",
     "# Display dataset information\n",
     "# data.head()\n",
     "# data.info()\n",
-    "data.describe()\n",
+    "print(data.describe())\n",
     "\n",
     "# Run the simple model\n",
-    "# f.simple_model(data) # will fit the model to the data, accuracy of predicting survival??\n",
+    "f.simple_model(data, print_report=True) # will fit the model to the data, measure model's accuracy in predicting survival\n",
     "# ^ when i run this, go from 1158 samples to just 151 samples"
    ]
   },
@@ -392,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +156,7 @@
     "\n",
     "# Check for OUTLIERS - if they exist, remove them or consider imputing them\n",
     "outliers = np.abs(stats.zscore(data_no_duplicates.select_dtypes(include=[np.number]))) > 3\n",
-    "# looking w/i 3 standard deviations\n",
+    "# looking at 3 standard deviations being the threshold for outliers\n",
     "\n",
     "#    we can see that tprc column has some outliers\n",
     "#       --> must decide if we're dropping those samples or assigning mean to those samples\n",
@@ -443,7 +166,7 @@
     "# data_no_duplicates.loc[[outliers[4], ['tprc']]] = np.mean(data_no_duplicates[\"tprc\"])\n",
     "# df.loc[df[col]condition, outputInfo]\n",
     "#         rows of Interest, col to view\n",
-    "# in datanodups$tprc, locate matches to outliers$tprc exist (ie are TRUE) = replace them with mean of datanodups$tprc\n",
+    "# in data_no_dups$tprc, locate matches to outliers$tprc exist (ie are TRUE) = replace them with mean of datanodups$tprc\n",
     "\n",
     "# .loc() not working, outlier df lacks title row? changed to the following:\n",
     "for i in range(0, len(outliers[4])):\n",
@@ -752,8 +475,7 @@
     "\n",
     "# Any other features you can think of?\n",
     "\n",
-    "# Scale the numerical features\n",
-    "# <insert code here>"
+    "# Scale the numerical features"
    ]
   },
   {
@@ -822,7 +544,7 @@
     "\n",
     "# Histogram of age\n",
     "plt.figure(figsize=(10, 6))\n",
-    "sns.histplot(data['age'], bins=30, kde=True)\n",
+    "sns.histplot(data['age'], bins=30, kde=True) # kde density line \n",
     "plt.title('Age Distribution')\n",
     "plt.xlabel('Age')\n",
     "plt.ylabel('Frequency')\n",
