minor code cleaning

--- a/Assignment4/Scripts/main.ipynb
+++ b/Assignment4/Scripts/main.ipynb
@@ -961,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "0edfe680",
    "metadata": {},
    "outputs": [
@@ -1010,7 +1010,7 @@
     "\n",
     "# One hot encode categorical variables \n",
     "X_train = pd.get_dummies(X_train, drop_first=True)\n",
-    "# too many features require long processing time --> exmaine only top features \n",
+    "# too many features require long processing time --> examine only top features \n",
     "top_features = X_train.columns[:80]\n",
     "X_train_reduced = X_train[top_features]\n",
     "\n",
@@ -1019,9 +1019,9 @@
     "rsf.fit(X_train_reduced, y_train)\n",
     "\n",
     "# please refer to https://scikit-survival.readthedocs.io/en/stable/user_guide/random-survival-forest.html\n",
-    "# permutation importance: looking at differnet permutations and assessing importance in tree-based funcitonality; what features giving menaingful splits? what features show more importance?\n",
-    "# functionality for random forest classifier had this built in \n",
+    "s# functionality for random forest classifier had this built in \n",
     "result = permutation_importance(rsf, X_train_reduced, y_train, n_repeats=3, random_state=42)\n",
+    "# Sort by importances_mean and plot\n",
     "feature_importance = pd.DataFrame(\n",
     "         {\n",
     "        k: result[k]\n",
@@ -1033,8 +1033,6 @@
     "    index=X_train_reduced.columns,\n",
     ").sort_values(by=\"importances_mean\", ascending=False)\n",
     "\n",
-    "# Sort by importances_mean and plot\n",
-    "feature_importance = feature_importance.sort_values(by=\"importances_mean\", ascending=False)\n",
     "\n",
     "plt.figure(figsize=(10, 6))\n",
     "plt.title('Feature Importances')\n",
@@ -1043,9 +1041,7 @@
     "plt.ylabel('Features')\n",
     "plt.gca().invert_yaxis()\n",
     "plt.tight_layout()\n",
-    "plt.show()\n",
-    "\n",
-    "# print(rsf.score(X_test, y_test)) #<-- to do "
+    "plt.show()\n"
    ]
   },
   {
