--- a/ECG_Anomaly_Autoencoders/Script/main.ipynb
+++ b/ECG_Anomaly_Autoencoders/Script/main.ipynb
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "99c490f9",
    "metadata": {},
    "outputs": [],
@@ -781,8 +781,7 @@
     "    reconstruct = model(data)\n",
     "    loss=losses.mae(reconstruct, data)\n",
     "    # is the loss of this ECG less than the 1std threshold?\n",
-    "    return tf.math.less(loss, threshold)\n",
-    "    "
+    "    return tf.math.less(loss, threshold)\n"
    ]
   },
   {
